# borg_paper_access_info

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
borg_paper_access_info/: html.py  main.html  main.py  ssh.py  utils.py
borg_paper_access_info/templates/: main.html
paper_backup/: main.py
paper_backup/templates/: main.html
