[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "borg_paper_access_info/*.py",
  "borg_paper_access_info/*.html",
]

[tool.hatch.version]
path = "borg_paper_access_info/__about__.py"

[project]
name = "borg_paper_access_info"
requires-python = ">=3.11"
dependencies = [
  'Jinja2~=3.1.2',
  'pdfkit~=1.0.0',
  'qrcode~=7.3.1',
  'click~=8.0.4'
]

[project.scripts]
borg_paper_access_info = "borg_paper_access_info.main:generate"

[tool.isort]
profile = "black"

